--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Daniel Cardoso Portela Câmara"
-lang: pt
+lang: en
 image: profile.jpeg
 about:
   template: jolla
@@ -11,14 +11,6 @@ about:
     - icon: github
       text: Github
       href: https://github.com/dcpcamara
-multilingue:
-  languages: 
-    pt: 
-      label: "Português"
-      link: "index.html"
-    en: 
-      label: "English"
-      link: "index-en.html"
 ---
 
-Daniel Câmara é um cientista de dados e epidemiologista com experiência em modelagem estatística, geoprocessamento e sensoriamento remoto. Com doutorado em epidemiologia de doenças infecciosas pela Fundação Oswaldo Cruz (FIOCRUZ), ele aplicou suas habilidades em importantes organizações internacionais, como a Organização Mundial da Saúde (OMS) e Universidade de Genebra. Daniel tem uma sólida trajetória na harmonização e análise de dados complexos, contribuindo para o desenvolvimento de dashboards e relatórios automatizados que informam decisões de saúde pública. Ele busca novas oportunidades para continuar aplicando seu conhecimento em ciência de dados e epidemiologia.
+Daniel Câmara is a data scientist and epidemiologist with experience in statistical modeling, geoprocessing, and remote sensing. Holding a PhD in infectious disease epidemiology from the Oswaldo Cruz Foundation (FIOCRUZ), he has applied his skills in prominent international organizations such as the World Health Organization (WHO) and the University of Geneva. Daniel has a strong track record in harmonizing and analyzing complex datasets, contributing to the development of automated dashboards and reports that inform public health decisions. He is seeking new opportunities to continue applying his expertise in data science and epidemiology.
