Updating and adding new post

--- a/cv.qmd
+++ b/cv.qmd
@@ -1,1 +1,7 @@
-![](Camara_Daniel_CV_202410.pdf){width="100%" height="1100px"}
+# Curriculum Vitae (in Portuguese)
+
+![](Camara_Daniel_CV-pt.pdf){width="100%" height="1100px"}
+
+# Curriculum Vitae (in English)
+
+![](Camara_Daniel_CV-en.pdf){width="100%" height="1100px"}
